argocd/templates/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - argocd.alex-localhost.ru
  gateways:
  - istio-system/platform-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - argocd.alex-localhost.ru
    route:
    - destination:
        host: argocd-server
        port:
          number: 443
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 443
